--- a/client/src/style/theme.scss
+++ b/client/src/style/theme.scss
@@ -451,7 +451,7 @@ $dark-text-color-dim: rgba(0, 0, 0, 0.3);
       background-color: rgba(0, 0, 0, 0.6);
    }
 
-   .super-item-card {
+   .item-card-group {
       border: 2px solid #448424;
    }
 
